--- a/clicker.html
+++ b/clicker.html
@@ -2,22 +2,35 @@
 <html>
 
 <head>
-
+    <button onclick="bone()">Click me</button>
 </head>
 
 <body>
     <h1 id="doge">hairs = 0</h1>
-    <img
-        id="dog" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeje4N33vJdDzTFjR-ls6IHl1yQ8lpFPUZUfIrfM5F2nUH12Y:https://i.redd.it/lw9juo1qu7v91.jpg&s">
-</body>
+    <img id="dog"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeje4N33vJdDzTFjR-ls6IHl1yQ8lpFPUZUfIrfM5F2nUH12Y:https://i.redd.it/lw9juo1qu7v91.jpg&s">
+    <img id="bone"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOlSKTWCIIs4eVyWRz_gt2lTzR1yVhAvcVPbiWHMeXz3y5KtA:https://i.pinimg.com/474x/b6/e9/64/b6e9648066512fd74e5aa8a208cf8bbb.jpg&s"
+        </body>
 
 </html>
 <script>
-    document.getElementById("dog").addEventListener("click",up)
+    document.getElementById("dog").addEventListener("click", up)
     var score = 0
     function up() {
         score = score + 1
-        document.getElementById("doge").innerHTML = "hairs="+score;
+        document.getElementById("doge").innerHTML = "hairs=" + score;
         console.log(score)
     }
+    document.getElementById("bone").addEventListener("click", upgrade)
+    var score = 0
+    function upgrade() {
+        //if points equals 20 subtract 20 points and score per click increases to 2
+        if(score=)
+        document.getElementById("doge").innerHTML = "hairs=" + score;
+        console.log(score)
+    }
+   
+    
+    function bone()
 </script>
