--- a/index.html
+++ b/index.html
@@ -1,117 +1,48 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 
 <head>
-    <style>
-        p {
-
-            color: white;
-
-        }
-
-        body {
-            background: black;
-        }
-
-        .fun {
-            background: grey;
-            margin-left: 25%;
-            margin-right: 25%;
-
-        }
-
-        img {
-            width: 100%;
-        }
-
-        .home {
-            background: grey;
-        }
-
-        body {
-            margin-left: 0px;
-            margin-right: 0px;
-            margin-top: 0px;
-        }
-
-        nav {
-            background: #333;
-            /* Background color for the navbar */
-            color: white;
-            /* Text color */
-            padding: 15px;
-            /* Padding inside the navbar */
-            display: flex;
-            /* Flexbox layout to align items */
-            justify-content: space-between;
-            /* Space between title and links */
-            align-items: center;
-            /* Vertically center the items */
-            margin-bottom: 20px;
-            /* Space below the navbar */
-        }
-
-        h1 {
-            margin: 0;
-            /* Remove default margin */
-            font-size: 24px;
-            /* Font size for the website title */
-        }
-
-        #nav-ul {
-            list-style-type: none;
-            /* Remove default list bullets */
-            padding: 0;
-            /* Remove default padding */
-            margin: 0;
-            /* Remove default margin */
-            display: flex;
-            /* Flexbox layout for horizontal list items */
-        }
-
-        .nav-li {
-            margin: 0 15px;
-            /* Space between each navigation item */
-        }
-
-        a {
-            color: white;
-            /* Link text color */
-            text-decoration: none;
-            /* Remove underline from links */
-        }
-
-        /* Add a hover effect for the navigation links */
-        a:hover {
-            color: #ffeb3b;
-            /* Change color on hover */
-        }
-    </style>
-    <title>space</title>
-
+    <title>Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- All content goes here -->
+    <div class="content">
 
-    <nav>
-        <h1>Chuck Mascaro</h1>
-        <ul id="nav-ul">
-            <li class="nav-li"><a href="index.html">Home</a></li>
-            <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>
-            <a href="/platformerJS.html">Platformer Game</a>
-            <a href="/clicker.html">clicker game</a>                                                                                                                                                          
-        </ul>
-    </nav>
-    
-    <div class="home">
-        home
     </div>
-    <div class="fun">
-        <p>Hi my name is Chuck</p>
-        <p>I like puppies</p>
-        <p>I am kinda dumb</p>
-        <img
-            src="https://lh5.googleusercontent.com/proxy/ZC2wLIp5NmIVBymzEwamvEtNOLZ44CUkdHqS91InRUasQDUbPw0m9lOXliofoJ5im06Ox8Hywz1AwJALa1pZRDR2jDuDhn5Ybr-KeRQTMm-2mrXyr7L7-TUpKzSW0A">
+    <div>
+        <nav>
+            <h1>Hallebot's Glorious Website</h1>
+            <ul id="nav-ul">
+                <li class="nav-li">
+                    <a href="index.html"> Home </a>
+                </li>
+                <li class="nav-li">
+                    <a href="portfolio.html"> Portfolio </a>
+                </li>
+
+        </nav>
+
+        <main>
+            <!-- Sidebar section -->
+            <div class="sidebar">
+                <img class="sidebar-img" src=https://media.glamour.com/photos/56959e35d9dab9ff41b308a0/master/pass/inspired-2015-02-gentoo-penguin-main.jpg>
+                    <h2>Chuck Mascaro</h2>
+                <p>Student at Lakshore High School</p>
+                <!-- Interests section -->
+            </div>
+            <div id="intrests">
+                <h3>Interests</h3>
+                <ul>
+                    <li>I like dogs</li>
+                    <li>I like video games</li>
+                    <li>i like cats</li>
+                </ul>
+
+            </div>
+
+        </main>
     </div>
 </body>
 
