--- a/platformerJS.html
+++ b/platformerJS.html
@@ -471,7 +471,7 @@
             ctx.fillRect(canvas.width / 4, canvas.height / 6, canvas.width / 2, canvas.height / 2)
             ctx.fillStyle = 'black'
             ctx.font = '800% serif'
-            ctx.fillText("Imagine dying nerd", canvas.width / 4, canvas.height / 6 + canvas.height / 5, canvas.width / 16 * 14)
+            ctx.fillText("imagine dying nerd", canvas.width / 4, canvas.height / 6 + canvas.height / 5, canvas.width / 16 * 14)
             ctx.font = '500% serif'
             ctx.fillText("hit any key to respawn", canvas.width / 4, canvas.height / 6 + canvas.height / 3, canvas.width / 16 * 14)
             if (anyKeyPress) {
