--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <main>
             <!-- Sidebar section -->
             <div class="sidebar">
-                <img class="sidebar-img" src=https://media.glamour.com/photos/56959e35d9dab9ff41b308a0/master/pass/inspired-2015-02-gentoo-penguin-main.jpg>
-                    <h2>Chuck Mascaro</h2>
+                <img class="sidebar-img"
+                    src=https://media.glamour.com/photos/56959e35d9dab9ff41b308a0/master/pass/inspired-2015-02-gentoo-penguin-main.jpg>
+                <h2>Chuck Mascaro</h2>
                 <p>Student at Lakshore High School</p>
                 <!-- Interests section -->
             </div>
