Finished Debugging project - all ghosts are now behaving properly!

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,12 @@
                 <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                 <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                 <li><a href="newCirclews.html">circles that bounce</a></li>
+                <li><a href="/asd-projects/data-shapes/">data shapes</a></li>
+                <li><a href="asd-projects/debugging-exercise/">debugging</a></li>
+                <li><a href="asd-projects/pong/">pong  </a></li>
+                <li><a href="asd-projects/snake/">snake that eats</a></li>
+                <li><a href="asd-projects/sorting/">sorting items</a></li>
+                <li><a href="asd-projects/walker/">moves around</a></li>
                 <li class="nav-li">
                     <a class="nav-a" href="index.html">Home</a>
                 </li>
