completed image filtering project

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
                 <li><a href="asd-projects/snake/">snake that eats</a></li>
                 <li><a href="asd-projects/sorting/">sorting items</a></li>
                 <li><a href="asd-projects/walker/">moves around</a></li>
+                <li><a href="asd-projects/image-filtering/">filter images</a></li>
                 <li class="nav-li">
                     <a class="nav-a" href="index.html">Home</a>
                 </li>
